--- a/provision/playbooks/constants/secrets.yml
+++ b/provision/playbooks/constants/secrets.yml
@@ -1,6 +1,10 @@
 ---
 
-db:
-  password: mypwd
+data:
+  postgresql:
+    user:
+      admin:
+        password: "mezzanineadminpwd"
+        
 
 ...
