--- a/provision/playbooks/python.yml
+++ b/provision/playbooks/python.yml
@@ -9,7 +9,7 @@
  
   pre_tasks:
       
-    - name: 'Controller host'
+    - name: 'Controller host configuration'
       ansible.builtin.debug:
         msg:
         - "domain: {{ aws_instance_dns_domain }}"
@@ -17,7 +17,7 @@
         - "ssh user: {{ ansible_user }}"
         - "ssh key: {{ ansible_private_key_file }}"
   
-    - name: upgrade all packages
+    - name: Upgrade all packages
       ansible.builtin.yum: name=* state=latest 
            
     - name: Installs a list of packages 
