--- a/provision/ansible.cfg
+++ b/provision/ansible.cfg
@@ -5,6 +5,10 @@ host_key_checking = False
 callback_enabled = timer
 nocows = 1
 interpreter_python=auto_silent  
+transport = ssh
+
+[ssh_connection]
+ssh_args = -o ForwardAgent=yes
 
 log_path=logs/ansible_log.txt
 stdout_callback = yaml
